# mserv

./: .license  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  libtool  mserv.spec  mservcli.pc.in  performance.xp  testsuite.xp
docs/: patches.txt  quick-start.txt
libltdl/: Makefile.in  aclocal.m4  configure  libtool
mserv/: CHANGES  Makefile.am  Makefile.in  THANKS  TODO  acl.c  acl.h  channel.c  channel.h  cmd.c  cmd.h  cmd_channel.c  cmd_channel.h  cmd_set.c  cmd_set.h  cmd_x.c  cmd_x.h  conf.c  conf.h  config.h.in  configure  configure.in  defconf.c  defconf.h  defines.h  english.lang  filter.c  filter.h  global.h  misc.c  module.c  module.h  mp3info.c  mp3info.h  mserv-soundcard.h  mserv.1  mserv.c  mserv.h  mservedit  mservripcd  (+6 more)
mserv/modules/: Makefile.am  Makefile.in  icecast.c  ossaudio.c
mservcli/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  misc.c  misc.h  mservcli.c  mservcli.h
mservutils/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  mservcmd.1  mservcmd.c
support/: mservplay.c
webclient/: README  index.html  main.cgi  margin.cgi  mserv.cgi
