dnl Mserv configure.in file - process with autoconf

	AC_INIT(mservcmd.c)
	AC_CONFIG_HEADER(config.h)
	AC_PREFIX_DEFAULT("/usr/local")

dnl Checks for programs.

	AC_PROG_CC
	AC_PROG_CPP
	AC_PROG_INSTALL
	AC_PROG_MAKE_SET
	AC_PROG_RANLIB
	AC_TYPE_SIGNAL

	AC_CHECK_PROG(make, gmake, gmake, make)

	CFLAGS="$CFLAGS -I. -I- -I../mservcli"
	CFLAGS="$CFLAGS -I/gnu/include -I/usr/local/include"
	DEPFLAGS=""
	LIBS=""
	LDFLAGS="$OSLDFLAGS -L/gnu/lib -L/usr/local/lib -L../mservcli"
	XTRA_LIBS=""

dnl Checks for libraries.

	AC_CHECK_LIB(socket, main, [XTRA_LIBS="$XTRA_LIBS -lsocket"])
	AC_CHECK_LIB(malloc, main, [XTRA_LIBS="$XTRA_LIBS -lmalloc"])
	AC_CHECK_LIB(mservcli, mservcli_connect,
			[XTRA_LIBS="$XTRA_LIBS -lmservcli"],
			[AC_MSG_ERROR("No mservcli library found!") ])

dnl Checks for header files.

	AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

	AC_C_CONST
	AC_C_INLINE

dnl Make CFLAGS not link and add additional stuff

	if [[ "x$GCC" = "xyes" ]]; then
		CFLAGS="$CFLAGS -Wall -Wno-format -W -Wunused"
		CFLAGS="$CFLAGS -Wmissing-prototypes"
		CFLAGS="$CFLAGS -Wcast-qual -Wcast-align"
	fi
	CFLAGS="-c $CFLAGS"

dnl Makefile substitutions

	if [[ "x$program_prefix" = "xNONE" ]]; then
		program_prefix=""
	fi

	AC_SUBST(DEPFLAGS)
	AC_SUBST(XTRA_LIBS)
	AC_SUBST(LDFLAGS)
	AC_SUBST(program_prefix)

dnl Final stuff

	AC_OUTPUT([Makefile])

	echo ""
	echo "Configuration was successful."

dnl Moooo.
